# telegram_bot_for_checking_assignments

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.sql  docker-compose.yml  pyproject.toml  run.py
src/: app.py
src/bot/: __init__.py  bot.py  errors.py  navigation.py  session.py
src/bot/filters/: __init__.py  access.py  callback.py  command.py
src/bot/handlers/: __init__.py  banned.py  full_name.py  general_settings.py  navigation.py  role.py  start.py
src/bot/keyboards/: factory.py  keyboards.py  main_menu.py  paginated_list.py  pagination.py
src/bot/lexicon/: callback_data.py  command_factory.py
src/bot/managers/: base.py  student.py  teacher.py
src/bot/managers.py/: session.py
src/bot/middlewares/: app_context.py  (+1 more)
src/core/: context.py  enums.py  fsm_states.py  logger.py  schemas.py  settings.py
src/database/: __init__.py  enums.py  models.py  schemas.py  session.py
src/db/: __init__.py  bot_data.sql  bot_structure.sql  models.py  pagination.py  session.py  wraps.py
src/redis/: __init__.py  admin_client.py  client.py  logger.py  role_client.py  state_client.py  telegram_users_client.py  user_locks_client.py
src/redis_cache/: __init__.py  client.py
src/services/: __init__.py  admin_storage.py  role_storage.py  user_locks_storage.py
src/utils/: __init__.py  logger.py  telegram_messages.py
tests/: README.md  __init__.py  conftest.py
tests/functional/: __init__.py  test_navigation.py
tests/integration/: __init__.py  test_homework_workflow.py
tests/unit/: __init__.py  test_repositories.py  test_schemas.py  test_utils.py
(+68 files in other folders)
