[project]
name = "telegram-bot-for-checking-assignments"
version = "0.1.0"
description = ""
authors = [
    {name = "Krutt-code",email = "brykovvita173@xmail.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "concurrent-log-handler (>=0.9.28,<0.10.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
